<resources>
    <string name="app_name">DSdroid</string><string name="FBTitle">Choose a ROM</string>
    <string name="ChooseROM">Choose ROM</string>
    <string name="SaveState">Save State</string>
    <string name="RestoreState">Restore State</string>
    
    <string name="Settings">Settings</string>
	<string name="Emulation">Emulation</string>
	<string name="Display">Display</string>
    <string name="FrameSkip">Frame Skip</string>
    <string name="FrameSkipDesc">Number of frames to skip. Higher frame skip will increase performance.</string>
    <string name="ShowFPS">Show FPS</string>
    <string name="ShowFPSDesc">Draw FPS (Frames Per Second) in the top-left corner of the screen.</string>
    <string name="LandscapeMode">Landscape Touch</string><string name="LandscapeModeDesc">Display the touch screen when in landscape mode.</string><string name="loading">Loading ROM…</string>    
    <string name="Filter">Filter</string>
    <string name="FilterDesc">What filter to use when drawing display. Filters decrease performance.</string>
    <string name="Renderer">3D Renderer</string>
    <string name="RendererDesc">Renderer to use when drawing 3D.</string>
    <string name="Sound">Sound</string>
    <string name="SoundDesc">Enable sound output. Disabling increases performance.</string>
    <string name="Microphone">Microphone</string>
    <string name="MicrophoneDesc" >Allow device\'s microphone to be used as DS microphone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="AddCheat">Add a new cheat (Action Replay)</string>
    <string name="Cheats">Cheats</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Code">Code</string>
   	<string name="Description">Description</string>
   	
    <string name="NoData">No data…</string><string-array name="FilterValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
    </string-array><string-array name="FilterNames">
        <item>None</item><item>LQ2x</item><item>LQ2xS</item>
		<item>HQ2x</item><item>HQ2xS</item><item>HQ4x</item>
		<item>2XSaI</item>
		<item>Super2XSaI</item>
		<item>SuperEagle</item>
		<item>Scanline</item><item>Bilinear</item>
		
		<item>Nearest 2X</item>
		
		
		
        
        <item>Nearest+ 1.5X</item>
        <item>Nearest 1.5X</item><item>EPX</item>
        <item>EPX+</item>
        <item>EPX 1.5X</item>
        <item>EPX+ 1.5X</item>
        
        
    </string-array>
    <string-array name="FrameSkipValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    
    <string-array name="RenderValues">
        <item>0</item>
        <item>1</item>
    </string-array><string-array name="RenderNames">
        <item>None</item>
        <item>SoftRasterizer</item>
    </string-array>
    
    
    
    
    
    
    </resources>